--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/C1p86/ue5-cli/issues"
   },
-  "homepage": "https://github.com/C1p86/ue5-cli#readme"
+  "homepage": "https://github.com/C1p86/ue5-cli#readme",
+  "bin": "index.js"
 }
