--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "consola": "^3.2.3",
     "minimist": "^1.2.8",
+    "node-stream-zip": "^1.15.0",
     "shelljs": "^0.8.5"
   }
 }
